fix docker file

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,5 @@
 FROM --platform=$BUILDPLATFORM golang:1.22.1 AS builder
 
-WORKDIR /workdir
-
 ENV GOCACHE=/tmp/go/cache
 ENV CGO_ENABLED=0
 
@@ -9,6 +7,10 @@ ARG TARGETOS
 ARG TARGETARCH
 ENV GOOS=$TARGETOS
 ENV GOARCH=$TARGETARCH
+
+ENV GOPROXY=https://goproxy.io,direct
+
+WORKDIR /workdir
 
 COPY ./go.* ./
 RUN --mount=type=cache,target=/go/pkg/mod go mod download
@@ -20,7 +22,7 @@ COPY . .
 FROM --platform=$BUILDPLATFORM builder AS anita-builder
 
 RUN --mount=type=cache,target=/go/pkg/mod --mount=type=cache,target=/tmp/go/cache \
-  go build -o /anita -ldflags "-s -w" -trimpath
+  go build -o /anita -ldflags "-s -w" -trimpath ./cmd/anita
 
 FROM gcr.io/distroless/base:latest AS anita
 
