--- a/dev/docker/compose.yaml
+++ b/dev/docker/compose.yaml
@@ -8,7 +8,7 @@ services:
     restart: always
     environment:
       DEV: "true"
-    entrypoint: sleep 1000000
+    entrypoint: ./anita run
     expose:
       - 8080
     depends_on:
@@ -42,9 +42,10 @@ services:
       - PMA_USER=root
       - PMA_PASSWORD=password
     ports:
-      - 3307:80
+      - 2420:80
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
 
 volumes:
   mysql:
